# mecab-parallel-experiment

./: .gitignore  README.md  naive.py  parallel_read.py  parallel_read_write.py  parallel_read_write_at_once.py  process_file_parallel.py  pyproject.toml  run.sh  serial_read.py  test.py
